<resources>
    <string name="channel_name">NotificationChannel</string>
    <string name="channel_description">The channel for push notifications</string>
    <string name="app_name">ComicConvo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="matches">Match</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="messages">Chat</string>
    <string name="about_me">About Me</string>
    <string name="likes">Likes</string>
    <string name="dislikes">Dislikes</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="remove">Remove</string>
    <string name="enter_title">Enter Pin Title</string>
    <string name="enter_description">Enter Pin Description</string>
    <string name="enter_address">Enter Full Address of Pin Location</string>
    <string name="Tag">Tag</string>
    <string name="radius_filter">Radius (mi)</string>
    <string name="store_checkbox">Store</string>
    <string name="convention_checkbox">Convention</string>
    <string name="meetup_checkbox">Meetup</string>
    <string name="message_hint">Send a message</string>
    <string name="notification_toggle">Notifications</string>
    <string name="do_not_disturb">Do Not Disturb</string>
    <string name="start_time">Start Hour</string>
    <string name="end_time">End Hour</string>
    <string name="save_time">Save Time</string>
    <string name="favorite_genre">Favorite Genre</string>
    <string name="clear">Clear</string>
    <string-array name="genre_list">
        <item name="adventure">Adventure</item>
        <item name="comedy">Comedy</item>
        <item name="mystery">Mystery</item>
    </string-array>
    <string-array name="tag_list">
        <item name="store_tag">Store</item>
        <item name="convention_tag">Convention</item>
        <item name="meetup_tag">Meetup</item>
    </string-array>
</resources>