<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <ImageView
        android:id="@+id/ivUserProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvAboutMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_me"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivUserProfile" />

    <EditText
        android:id="@+id/etAboutMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="User description goes here"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutMe"
        tools:ignore="TouchTargetSizeCheck">

    </EditText>

    <TextView
        android:id="@+id/tvLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/likes"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAboutMe" />

    <TextView
        android:id="@+id/tvDislikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/dislikes"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvLikes" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLikes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLikes" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDislikes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDislikes" />

    <Button
        android:id="@+id/btnEditLists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/edit"
        app:icon="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toTopOf="@+id/rvLikes"
        app:layout_constraintStart_toEndOf="@+id/tvLikes"
        app:layout_constraintTop_toBottomOf="@+id/etAboutMe" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:text="@string/logout"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivUserProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAboutMe"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/etAboutMe"
        app:layout_constraintStart_toEndOf="@+id/tvAboutMe"
        app:layout_constraintTop_toBottomOf="@+id/ivUserProfile" />

</androidx.constraintlayout.widget.ConstraintLayout>