<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MapFragment">

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="0dp" />

    <ImageButton
        android:id="@+id/ibAddPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:src="@android:drawable/ic_input_add" />

    <EditText
        android:id="@+id/etPinRadius"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/clickable"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="0dp"
        android:background="#FFFFFF"
        android:hint="@string/radius_filter"></EditText>

    <ImageButton
        android:id="@+id/ibRadiusSubmit"
        android:layout_width="@dimen/clickable"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/etPinRadius"
        android:background="#67A33D"
        android:src="?android:attr/textCheckMark" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/clickable"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/ibRadiusSubmit"
        android:background="#FFFFFF">

        <CheckBox
            android:id="@+id/cbStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="@font/mouse_memoirs"
            android:text="@string/store_checkbox"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbMeetup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-1dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/cbConvention"
            android:fontFamily="@font/mouse_memoirs"
            android:text="@string/meetup_checkbox"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbConvention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/cbStore"
            android:fontFamily="@font/mouse_memoirs"
            android:text="@string/convention_checkbox"
            android:textSize="20sp" />
    </RelativeLayout>


</RelativeLayout>